fix: margins aligned to pixel perfect

--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,5 +1,5 @@
 .intro__list {
-  margin: 32px 0 0;
+  margin: 33px 0 0;
   padding: 0;
   list-style: none;
 }
