--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,5 @@
 .intro__title {
-  margin-top: 92px;
+  margin: 0;
   font-size: 54px;
   line-height: 1.07;
   font-weight: 900;
